feat: add terrain-aware frontier traversal